Fix CI clasp invocation

--- a/.github/workflows/push-to-appsscript.yml
+++ b/.github/workflows/push-to-appsscript.yml
@@ -24,12 +24,20 @@ jobs:
             "token": {
               "access_token": "${{ secrets.CLASP_ACCESS_TOKEN }}",
               "refresh_token": "${{ secrets.CLASP_REFRESH_TOKEN }}",
+              "scope": "https://www.googleapis.com/auth/script.deployments https://www.googleapis.com/auth/script.projects https://www.googleapis.com/auth/script.webapp.deploy https://www.googleapis.com/auth/drive.metadata.readonly https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/service.management https://www.googleapis.com/auth/logging.read https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/cloud-platform openid",
+              "token_type": "Bearer",
               "id_token": "${{ secrets.CLASP_ID_TOKEN }}",
-              "expiry_date": ${{ secrets.CLASP_TOKEN_EXPIRY_DATE }},
-              "token_type": "Bearer"
-            }
+              "expiry_date": ${{ secrets.CLASP_TOKEN_EXPIRY_DATE }}
+            },
+            "oauth2ClientSettings": {
+              "clientId": "1072944905499-vm2v2i5dvn0a0d2o4ca36i1vge8cvbn0.apps.googleusercontent.com",
+              "clientSecret": "v6V3fKV_zWU7iw1DrpO1rknX",
+              "redirectUri": "http://localhost"
+            },
+            "isLocalCreds": false
           }
           JSON
 
+
       - name: Push to Apps Script
-        run: npx clasp push -f
+        run: npx @google/clasp push -f
