--- a/.github/workflows/push-to-appsscript.yml
+++ b/.github/workflows/push-to-appsscript.yml
@@ -38,6 +38,12 @@ jobs:
           }
           JSON
 
+      - name: Debug clasp credentials
+        run: |
+          echo "HOME=$HOME"
+          ls -la ~
+          echo "----- ~/.clasprc.json -----"
+          cat ~/.clasprc.json
 
       - name: Push to Apps Script
         run: npx @google/clasp push -f
