CI: write local .clasprc.json for clasp

--- a/.github/workflows/push-to-appsscript.yml
+++ b/.github/workflows/push-to-appsscript.yml
@@ -37,6 +37,7 @@ jobs:
             "isLocalCreds": false
           }
           JSON
+          cp ~/.clasprc.json ./.clasprc.json
 
       - name: Debug clasp credentials
         run: |
