--- a/.github/workflows/push-to-appsscript.yml
+++ b/.github/workflows/push-to-appsscript.yml
@@ -46,6 +46,12 @@ jobs:
           echo "----- ~/.clasprc.json -----"
           cat ~/.clasprc.json
 
+      - name: Debug clasp files
+        run: |
+          pwd
+          ls -la
+          ls -la ~ | grep clasprc || true
+
       - name: Push to Apps Script
         env:
           CLASP_CONFIG_PATH: /home/runner/.clasprc.json
