--- a/.github/workflows/push-to-appsscript.yml
+++ b/.github/workflows/push-to-appsscript.yml
@@ -18,27 +18,36 @@ jobs:
         run: npm ci || npm install
 
       - name: Write clasp credentials
-        env:
-          EXPIRY: ${{ secrets.CLASP_TOKEN_EXPIRY_DATE }}
         run: |
-          cat > ~/.clasprc.json << JSON
-          {
-            "token": {
-              "access_token": "${{ secrets.CLASP_ACCESS_TOKEN }}",
-              "refresh_token": "${{ secrets.CLASP_REFRESH_TOKEN }}",
-              "scope": "https://www.googleapis.com/auth/script.deployments https://www.googleapis.com/auth/script.projects https://www.googleapis.com/auth/script.webapp.deploy https://www.googleapis.com/auth/drive.metadata.readonly https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/service.management https://www.googleapis.com/auth/logging.read https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/cloud-platform openid",
-              "token_type": "Bearer",
-              "id_token": "${{ secrets.CLASP_ID_TOKEN }}",
-              "expiry_date": ${EXPIRY}
-            }
-          }
-          JSON
-          cp ~/.clasprc.json ./.clasprc.json
+          node - <<'NODE'
+          const fs = require('fs');
+          const path = require('path');
 
+          const creds = {
+            token: {
+              access_token: process.env.CLASP_ACCESS_TOKEN,
+              refresh_token: process.env.CLASP_REFRESH_TOKEN,
+              id_token: process.env.CLASP_ID_TOKEN,
+              token_type: "Bearer",
+              expiry_date: Number(process.env.CLASP_TOKEN_EXPIRY_DATE)
+            }
+          };
+
+          const home = process.env.HOME || '/home/runner';
+          const globalPath = path.join(home, '.clasprc.json');
+          fs.writeFileSync(globalPath, JSON.stringify(creds));
+          fs.writeFileSync(path.join(process.cwd(), '.clasprc.json'), JSON.stringify(creds));
+          console.log('Wrote clasp creds to', globalPath, 'and ./.clasprc.json');
+          NODE
+        env:
+          CLASP_ACCESS_TOKEN: ${{ secrets.CLASP_ACCESS_TOKEN }}
+          CLASP_REFRESH_TOKEN: ${{ secrets.CLASP_REFRESH_TOKEN }}
+          CLASP_ID_TOKEN: ${{ secrets.CLASP_ID_TOKEN }}
+          CLASP_TOKEN_EXPIRY_DATE: ${{ secrets.CLASP_TOKEN_EXPIRY_DATE }}
 
       - name: Validate clasp token JSON
         run: |
-          node -e "const fs=require('fs'); const j=JSON.parse(fs.readFileSync(process.env.HOME+'/.clasprc.json','utf8')); const t=j.token||{}; console.log('has_access', !!t.access_token); console.log('has_refresh', !!t.refresh_token); console.log('expiry_type', typeof t.expiry_date); console.log('expiry_value_is_number', Number.isFinite(t.expiry_date));"
+          node -e "const fs=require('fs'); const j=JSON.parse(fs.readFileSync(process.env.HOME+'/.clasprc.json','utf8')); const t=j.token||{}; console.log('has_access', !!t.access_token); console.log('has_refresh', !!t.refresh_token); console.log('expiry_type', typeof t.expiry_date); console.log('expiry_is_number', Number.isFinite(t.expiry_date));"
 
       - name: Debug clasp credentials
         run: |
@@ -54,7 +63,5 @@ jobs:
           ls -la ~ | grep clasprc || true
 
       - name: Push to Apps Script
-        env:
-          CLASP_CONFIG_PATH: /home/runner/.clasprc.json
         run: npx @google/clasp push -f
 
